--- a/SOURCES/defs/jruby-1.6.5
+++ b/SOURCES/defs/jruby-1.6.5
@@ -1,6 +1,8 @@
 # RBBuild Def File
 # UPDATED 13/Aug/2015 11:53:13 by Anton Novojilov <andy@essentialkaos.com>
 
+eol(normal): 2012-09-18
+
 deps(rpm): make gcc gcc-c++
 deps(deb): make gcc build-essentials
 deps(bin): java
