Add checksum for jruby-9.2.11.0 and jruby-9.2.11.1

--- a/SOURCES/defs/jruby-9.2.11.1
+++ b/SOURCES/defs/jruby-9.2.11.1
@@ -1,12 +1,12 @@
 # RBBuild Def File
-# UPDATED 03/Mar/2020 01:08:59 by Anton Novojilov <andy@essentialkaos.com>
+# UPDATED 08/Apr/2020 12:36:28 by Anton Novojilov <andy@essentialkaos.com>
 
 deps(rpm): make gcc gcc-c++
 deps(deb): make gcc build-essentials
 deps(bin): java
 
 [default]
-  package: "jruby-9.2.11.1" "https://s3.amazonaws.com/jruby.org/downloads/9.2.11.1/jruby-bin-9.2.11.1.tar.gz" "!" jruby
+  package: "jruby-9.2.11.1" "https://s3.amazonaws.com/jruby.org/downloads/9.2.11.1/jruby-bin-9.2.11.1.tar.gz" "cceb81635fe3cd39f895c7632428e94b503e8e3d" jruby
 
 [essentialkaos]
-  package: "jruby-9.2.11.1" "https://ruby.kaos.st/jruby-9.2.11.1.7z" "!" jruby
+  package: "jruby-9.2.11.1" "https://ruby.kaos.st/jruby-9.2.11.1.7z" "a3568a1adc4313d418c9870ada1dbea1e20ace80" jruby
