--- a/SOURCES/defs/truffleruby-19.3.2
+++ b/SOURCES/defs/truffleruby-19.3.2
@@ -1,7 +1,8 @@
 # RBBuild Def File
 # UPDATED 17/Jun/2020 00:39:54 by Anton Novojilov <andy@essentialkaos.com>
 
-deps(bin): java
+deps(rpm): gcc openssl-devel
+deps(deb): gcc libssl-dev
 
 [default]
   package: "truffleruby-19.3.2" "https://github.com/oracle/truffleruby/releases/download/vm-19.3.2/truffleruby-19.3.2-linux-amd64.tar.gz" "265e1861706032033d6c5ede60b83df1efbb42a7" truffle
