--- a/SOURCES/defs/2.4.1
+++ b/SOURCES/defs/2.4.1
@@ -1,6 +1,9 @@
 # RBBuild Def File
 # UPDATED 06/Feb/2021 01:19:43 by Anton Novojilov <andy@essentialkaos.com>
 
+eol(normal): 2019-03-31
+eol(security): 2020-03-31
+
 deps(rpm): gcc make zlib-devel readline-devel tk-devel ca-certificates
 deps(rpm): autoconf glibc-devel ncurses-devel bison libffi-devel
 deps(deb): gcc make zlib1g-dev libreadline6-dev tk-dev ca-certificates
