--- a/SOURCES/defs/2.3.3
+++ b/SOURCES/defs/2.3.3
@@ -2,6 +2,7 @@
 # UPDATED 06/Feb/2021 01:30:47 by Anton Novojilov <andy@essentialkaos.com>
 
 eol(normal): 2019-03-31
+eol(security): 2019-03-31
 
 deps(rpm): gcc make zlib-devel readline-devel tk-devel ca-certificates
 deps(rpm): autoconf glibc-devel ncurses-devel bison libffi-devel
