--- a/SOURCES/defs/2.6.2
+++ b/SOURCES/defs/2.6.2
@@ -1,5 +1,5 @@
 # RBBuild Def File
-# UPDATED 06/Feb/2021 01:19:46 by Anton Novojilov <andy@essentialkaos.com>
+# UPDATED 17/Feb/2021 01:12:14 by Anton Novojilov <andy@essentialkaos.com>
 
 deps(rpm): gcc make zlib-devel readline-devel tk-devel ca-certificates
 deps(rpm): autoconf glibc-devel ncurses-devel bison libffi-devel
@@ -8,16 +8,16 @@ deps(deb): autoconf libc6-dev libncurses5-dev bison libffi-dev
 
 deps(bin): ruby
 
-CONFOPTS(openssl-1.1.1i): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
-MAKEOPTS(openssl-1.1.1i): -j 1
-PREFIX(openssl-1.1.1i): {prefix}/openssl
+CONFOPTS(openssl-1.1.1j): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
+MAKEOPTS(openssl-1.1.1j): -j 1
+PREFIX(openssl-1.1.1j): {prefix}/openssl
 
 CONFOPTS(ruby-2.6.2-p0): --with-openssl-dir={prefix}/openssl --disable-install-doc
 
 [default]
-  package: "openssl-1.1.1i" "https://www.openssl.org/source/openssl-1.1.1i.tar.gz" "eb684ba4ed31fe2c48062aead75233ecd36882a6" openssl
+  package: "openssl-1.1.1j" "https://www.openssl.org/source/openssl-1.1.1j.tar.gz" "04c340b086828eecff9df06dceff196790bb9268" openssl
   package: "ruby-2.6.2-p0" "https://cache.ruby-lang.org/pub/ruby/2.6/ruby-2.6.2.tar.gz" "44c6634a41f63ebdc1f3ce6ddcf48a4766bb4df7"
 
 [essentialkaos]
-  package: "openssl-1.1.1i" "https://ruby.kaos.st/openssl-1.1.1i.7z" "ef3fdabe962210eae4aa9c399be091c4d79ed698" openssl
+  package: "openssl-1.1.1j" "https://ruby.kaos.st/openssl-1.1.1j.7z" "d8e0fdd8becbe283f95c75459a5baa982163fb20" openssl
   package: "ruby-2.6.2-p0" "https://ruby.kaos.st/ruby-2.6.2.7z" "c76b54231329fb63e0a9efd08b37b68f353824e2"
