--- a/SOURCES/defs/2.4.3
+++ b/SOURCES/defs/2.4.3
@@ -1,5 +1,5 @@
 # RBBuild Def File
-# UPDATED 17/Feb/2021 01:12:12 by Anton Novojilov <andy@essentialkaos.com>
+# UPDATED 07/Apr/2021 23:12:55 by Anton Novojilov <andy@essentialkaos.com>
 
 eol(normal): 2019-03-31
 eol(security): 2020-03-31
@@ -9,16 +9,16 @@ deps(rpm): autoconf glibc-devel ncurses-devel bison libffi-devel
 deps(deb): gcc make zlib1g-dev libreadline6-dev tk-dev ca-certificates
 deps(deb): autoconf libc6-dev libncurses5-dev bison libffi-dev
 
-CONFOPTS(openssl-1.1.1j): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
-MAKEOPTS(openssl-1.1.1j): -j 1
-PREFIX(openssl-1.1.1j): {prefix}/openssl
+CONFOPTS(openssl-1.1.1k): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
+MAKEOPTS(openssl-1.1.1k): -j 1
+PREFIX(openssl-1.1.1k): {prefix}/openssl
 
 CONFOPTS(ruby-2.4.3-p0): --with-openssl-dir={prefix}/openssl --disable-install-doc
 
 [default]
-  package: "openssl-1.1.1j" "https://www.openssl.org/source/openssl-1.1.1j.tar.gz" "04c340b086828eecff9df06dceff196790bb9268" openssl
+  package: "openssl-1.1.1k" "https://www.openssl.org/source/openssl-1.1.1k.tar.gz" "bad9dc4ae6dcc1855085463099b5dacb0ec6130b" openssl
   package: "ruby-2.4.3-p0" "https://cache.ruby-lang.org/pub/ruby/2.4/ruby-2.4.3.tar.gz" "787b7f4e90fb4b39a61bc1a31eb7765f875a590c"
 
 [essentialkaos]
-  package: "openssl-1.1.1j" "https://ruby.kaos.st/openssl-1.1.1j.7z" "d8e0fdd8becbe283f95c75459a5baa982163fb20" openssl
+  package: "openssl-1.1.1k" "https://ruby.kaos.st/openssl-1.1.1k.7z" "326b350d63ed6215ab2db873ace575cf15245d7d" openssl
   package: "ruby-2.4.3-p0" "https://ruby.kaos.st/ruby-2.4.3.7z" "1cd2dfe3c7e4329d37935ff875419d6cebbd7170"
