--- a/SOURCES/defs/2.6.6
+++ b/SOURCES/defs/2.6.6
@@ -1,5 +1,5 @@
 # RBBuild Def File
-# UPDATED 17/Feb/2021 01:12:15 by Anton Novojilov <andy@essentialkaos.com>
+# UPDATED 07/Apr/2021 23:12:58 by Anton Novojilov <andy@essentialkaos.com>
 
 deps(rpm): gcc make zlib-devel readline-devel tk-devel ca-certificates
 deps(rpm): autoconf glibc-devel ncurses-devel bison libffi-devel
@@ -8,16 +8,16 @@ deps(deb): autoconf libc6-dev libncurses5-dev bison libffi-dev
 
 deps(bin): ruby
 
-CONFOPTS(openssl-1.1.1j): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
-MAKEOPTS(openssl-1.1.1j): -j 1
-PREFIX(openssl-1.1.1j): {prefix}/openssl
+CONFOPTS(openssl-1.1.1k): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
+MAKEOPTS(openssl-1.1.1k): -j 1
+PREFIX(openssl-1.1.1k): {prefix}/openssl
 
 CONFOPTS(ruby-2.6.6-p0): --with-openssl-dir={prefix}/openssl --disable-install-doc
 
 [default]
-  package: "openssl-1.1.1j" "https://www.openssl.org/source/openssl-1.1.1j.tar.gz" "04c340b086828eecff9df06dceff196790bb9268" openssl
+  package: "openssl-1.1.1k" "https://www.openssl.org/source/openssl-1.1.1k.tar.gz" "bad9dc4ae6dcc1855085463099b5dacb0ec6130b" openssl
   package: "ruby-2.6.6-p0" "https://cache.ruby-lang.org/pub/ruby/2.6/ruby-2.6.6.tar.gz" "2d78048e293817f38d4ede4ebc7873013e97bb0b"
 
 [essentialkaos]
-  package: "openssl-1.1.1j" "https://ruby.kaos.st/openssl-1.1.1j.7z" "d8e0fdd8becbe283f95c75459a5baa982163fb20" openssl
+  package: "openssl-1.1.1k" "https://ruby.kaos.st/openssl-1.1.1k.7z" "326b350d63ed6215ab2db873ace575cf15245d7d" openssl
   package: "ruby-2.6.6-p0" "https://ruby.kaos.st/ruby-2.6.6.7z" "40cb10841d58c2ef8252d6a1fd66bbd3101b6001"
