--- a/SOURCES/defs/3.1.2
+++ b/SOURCES/defs/3.1.2
@@ -1,5 +1,5 @@
 # -- [RBdef] --
-# UPDATED 11/Dec/2023 14:13:26 by Anton Novojilov <andy@essentialkaos.com>
+# UPDATED 12/Dec/2023 00:34:33 by Anton Novojilov <andy@essentialkaos.com>
 
 eol(normal): 2024-03-31
 eol(security): 2025-03-31
@@ -9,15 +9,15 @@ deps(rpm): autoconf glibc-devel ncurses-devel bison libffi-devel
 deps(deb): build-essential zlib1g-dev libreadline6-dev tk-dev ca-certificates
 deps(deb): autoconf libc6-dev libncurses5-dev bison libffi-dev
 
-CONFOPTS(openssl-3.1.4): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
-PREFIX(openssl-3.1.4): {prefix}/openssl
+CONFOPTS(openssl-1.1.1w): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
+PREFIX(openssl-1.1.1w): {prefix}/openssl
 
 CONFOPTS(ruby-3.1.2): --with-openssl-dir={prefix}/openssl --disable-install-doc
 
 [default]
-  package: "openssl-3.1.4" "https://www.openssl.org/source/openssl-3.1.4.tar.gz" "24c5d4308e0f901326f15c274c8c736117966499" openssl
+  package: "openssl-1.1.1w" "https://www.openssl.org/source/openssl-1.1.1w.tar.gz" "76fbf3ca4370e12894a408ef75718f32cdab9671" openssl
   package: "ruby-3.1.2" "https://cache.ruby-lang.org/pub/ruby/3.1/ruby-3.1.2.tar.gz" "b0d86c60457fdfbcb532cb681877a2f790f66b25"
 
 [essentialkaos]
-  package: "openssl-3.1.4" "https://ruby.kaos.st/openssl-3.1.4.tzst" "f4af7f603803d5ee52ebaec5185987378eb70edb" openssl
+  package: "openssl-1.1.1w" "https://ruby.kaos.st/openssl-1.1.1w.tzst" "e9dcdbc98b9172de70f285f96ace5e5a9f885999" openssl
   package: "ruby-3.1.2" "https://ruby.kaos.st/ruby-3.1.2.tzst" "2ab16eff9b30f00f4add30e35578450823c74209"
