--- a/SOURCES/defs/3.1.4
+++ b/SOURCES/defs/3.1.4
@@ -12,12 +12,12 @@ deps(deb): autoconf libc6-dev libncurses5-dev bison libffi-dev
 CONFOPTS(openssl-1.1.1w): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
 PREFIX(openssl-1.1.1w): {prefix}/openssl
 
-CONFOPTS(ruby-1.1.1w): --with-openssl-dir={prefix}/openssl --disable-install-doc
+CONFOPTS(ruby-3.1.4): --with-openssl-dir={prefix}/openssl --disable-install-doc
 
 [default]
   package: "openssl-1.1.1w" "https://www.openssl.org/source/openssl-1.1.1w.tar.gz" "76fbf3ca4370e12894a408ef75718f32cdab9671" openssl
-  package: "ruby-1.1.1w" "https://cache.ruby-lang.org/pub/ruby/3.1/ruby-1.1.1w.tar.gz" "38eddfc5a7536b6c8133183563009a4ed9bbe6db"
+  package: "ruby-3.1.4" "https://cache.ruby-lang.org/pub/ruby/3.1/ruby-3.1.4.tar.gz" "38eddfc5a7536b6c8133183563009a4ed9bbe6db"
 
 [essentialkaos]
   package: "openssl-1.1.1w" "https://ruby.kaos.st/openssl-1.1.1w.tzst" "e9dcdbc98b9172de70f285f96ace5e5a9f885999" openssl
-  package: "ruby-1.1.1w" "https://ruby.kaos.st/ruby-1.1.1w.tzst" "6b2e01dc38b6866b4901cdaf0dc9d49adc3d8fa9"
+  package: "ruby-3.1.4" "https://ruby.kaos.st/ruby-3.1.4.tzst" "6b2e01dc38b6866b4901cdaf0dc9d49adc3d8fa9"
