--- a/SOURCES/defs/3.1.1
+++ b/SOURCES/defs/3.1.1
@@ -1,5 +1,5 @@
 # -- [RBdef] --
-# UPDATED 12/Dec/2023 00:34:33 by Anton Novojilov <andy@essentialkaos.com>
+# UPDATED 03/Aug/2024 17:25:35 by Anton Novojilov <andy@essentialkaos.com>
 
 eol(normal): 2024-03-31
 eol(security): 2025-03-31
@@ -9,15 +9,15 @@ deps(rpm): autoconf glibc-devel ncurses-devel bison libffi-devel
 deps(deb): build-essential zlib1g-dev libreadline6-dev tk-dev ca-certificates
 deps(deb): autoconf libc6-dev libncurses5-dev bison libffi-dev
 
-CONFOPTS(openssl-1.1.1w): {os_name}-{os_arch} --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
-PREFIX(openssl-1.1.1w): {prefix}/openssl
+CONFOPTS(openssl-3.0.14): {os_name}-{os_arch} --libdir=lib --openssldir={prefix}/openssl/ssl zlib-dynamic no-ssl3 shared -fPIC
+PREFIX(openssl-3.0.14): {prefix}/openssl
 
 CONFOPTS(ruby-3.1.1): --with-openssl-dir={prefix}/openssl --disable-install-doc
 
 [default]
-  package: "openssl-1.1.1w" "https://www.openssl.org/source/openssl-1.1.1w.tar.gz" "76fbf3ca4370e12894a408ef75718f32cdab9671" openssl
+  package: "openssl-3.0.14" "https://www.openssl.org/source/openssl-3.0.14.tar.gz" "80b67212212a5ba81b071026d1ad851d6cbcca93" openssl
   package: "ruby-3.1.1" "https://cache.ruby-lang.org/pub/ruby/3.1/ruby-3.1.1.tar.gz" "289cbb9eae338bdaf99e376ac511236e39be83a3"
 
 [essentialkaos]
-  package: "openssl-1.1.1w" "https://ruby.kaos.st/openssl-1.1.1w.tzst" "e9dcdbc98b9172de70f285f96ace5e5a9f885999" openssl
+  package: "openssl-3.0.14" "https://ruby.kaos.st/openssl-3.0.14.tzst" "f62bc2cb86292b928d53e58e02658a1c804bf587" openssl
   package: "ruby-3.1.1" "https://ruby.kaos.st/ruby-3.1.1.tzst" "f1fc75f43d97d8e835d014c3a15da96dbd282d8a"
